--- a/OpenLoginKeyViewer/Web3Auth.plist
+++ b/OpenLoginKeyViewer/Web3Auth.plist
@@ -5,6 +5,6 @@
 	<key>ClientId</key>
 	<string>BEvzsPEkx0ir-DKwS4rJ9_Wf5FlZMTLaSlFuWN64wDlpqOkMI-gUSXUYN9JV-QZEt60dqlQOMD1oK9ZcOxbyfrc</string>
 	<key>Network</key>
-	<string>mainnet</string>
+	<string>mainet</string>
 </dict>
 </plist>
